objects/Contact/fields/AdditionalFunctionalities__c.field-meta.xml
<CustomField>
    <fullName>AdditionalFunctionalities__c</fullName>
    <label>Funciones Adicionales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>VerComisiones</fullName>
                <label>Ver Comisiones</label>
            </value>
            <value>
                <fullName>CambiarMails</fullName>
                <label>Cambiar Mails</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>