objects/Contact/fields/FinServ__Gender__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>PersonaJuridica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>