objects/Contact/fields/FinServ__MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>67Bis</fullName>
                <label>67 Bis</label>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Separado</fullName>
            </value>
            <value>
                <fullName>Soltero</fullName>
            </value>
            <value>
                <fullName>UnionCivil</fullName>
                <label>Unión Civil</label>
            </value>
            <value>
                <fullName>Viudo</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>