objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ExternalId__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.FinServ__IndustriesBusiness</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>demo</value>
    </filters>
    <label>Todos los Contactos</label>
</ListView>